# hits

./: .gitignore  .npmignore  AGENTS.md  LICENSE  NOTICE  README.md  package.json  postinstall.cjs  pyproject.toml  requirements-core.txt  requirements-mcp.txt  requirements.txt  run.bat  run.sh  server.js  test_web_ui_report.html
config/: schema.json  settings.yaml
data/: dev_handover.yaml
docs/: api-reference.md  architecture.md  mcp-tools.md  signals.md
hits_core/: __init__.py  cli.py  main.py
hits_core/ai/: __init__.py  checkpoint_compressor.py  compressor.py  llm_client.py  slm_filter.py
hits_core/api/: __init__.py  server.py
hits_core/auth/: __init__.py  dependencies.py  manager.py  middleware.py
hits_core/collector/: __init__.py  ai_session_collector.py  base.py  daemon.py  git_collector.py  hits_action_collector.py  shell_collector.py
hits_core/mcp/: __init__.py  server.py
hits_core/models/: __init__.py  checkpoint.py  context_dag.py  node.py  signal.py  task.py  tree.py  work_log.py  workflow.py  workflow_checkpoint.py
hits_core/platform/: __init__.py  actions.py
hits_core/service/: __init__.py  checkpoint_service.py  context_dag_service.py  handover_service.py  knowledge_extractor.py  knowledge_service.py  signal_service.py  token_tracker.py  tree_service.py  (+1 more)
hits_ui/: __init__.py  font_loader.py  main.py
hits_web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
hooks/: claude_auto_recorder.sh  claude_prompt_capture.sh  claude_signal_watcher.sh  opencode_signal_watcher.sh
scripts/: docker-compose.yaml  run_tests.sh  setup_redis.sh  test_server.sh
tests/: conftest.py
(+75 files in other folders)
